--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bcrypt": "^0.8.7",
+    "core-decorators": "^0.12.3",
     "material-ui": "^0.15.4",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.15.1",
@@ -15,11 +16,20 @@
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-mixin": "^2.0.2",
-    "react-router": "^2.7.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
-    "react-time": "^4.2.0"
+    "react-time": "^4.2.0",
+    "redux": "^3.6.0",
+    "redux-form": "^6.0.5",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.7.0",
+    "eslint-plugin-meteor": "^4.0.0"
   }
 }
