--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,16 @@
 {
+  "presets": [
+    "es2015",
+    "react",
+    "stage-0"
+  ],
   "plugins": [
+    "transform-class-properties",
+    "transform-function-bind",
+    "babel-plugin-transform-decorators-legacy",
+    "react-hot-loader/babel",
+    "transform-regenerator",
+    "transform-runtime",
     "transform-class-properties",
     "transform-function-bind",
     "babel-plugin-transform-decorators-legacy"
