--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "kasboek",
+  "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "webpack-dev-server --verbose --inline --hot --history-api-fallback",
+    "build-dev": "webpack --config webpack.dev.config.js",
+    "build-prod": "webpack -p --config webpack.prod.config.js"
   },
+  "author": "Ferenc Radius",
   "dependencies": {
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "6.16.0",
+    "babel-runtime": "6.11.6",
     "bcrypt": "^0.8.7",
     "core-decorators": "^0.12.3",
-    "material-ui": "^0.15.4",
-    "meteor-node-stubs": "~0.2.0",
+    "material-ui": "^0.16.0",
     "moment": "^2.15.1",
     "react": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-mixin": "^2.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
@@ -24,12 +26,40 @@
     "redux": "^3.6.0",
     "redux-form": "^6.0.5",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "redux-saga": "^0.12.0"
   },
   "devDependencies": {
+    "autoprefixer-core": "^5.1.11",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-regenerator": "^6.16.1",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.11.6",
+    "css-loader": "^0.25.0",
+    "enzyme": "^2.4.1",
     "eslint": "^3.7.0",
-    "eslint-plugin-meteor": "^4.0.0"
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-import": "2.0.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "mocha": "^3.1.0",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-import": "^8.1.2",
+    "postcss-loader": "^0.13.0",
+    "postcss-url": "^5.1.2",
+    "react-addons-test-utils": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.5",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
   }
 }
