--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
   },
   "author": "Ferenc Radius",
   "dependencies": {
+    "@risingstack/graffiti-mongoose": "^5.3.0",
+    "apollo-client": "^0.4.20",
     "babel-polyfill": "6.16.0",
     "babel-runtime": "6.11.6",
     "bcrypt": "^0.8.7",
     "core-decorators": "^0.12.3",
+    "cors": "^2.8.1",
+    "graphql": "^0.7.1",
+    "graphql-tag": "^0.1.14",
     "material-ui": "^0.16.0",
     "moment": "^2.15.1",
+    "mongoose": "^4.6.3",
     "react": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
+    "react-apollo": "^0.5.8",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
@@ -26,11 +33,11 @@
     "redux": "^3.6.0",
     "redux-form": "^6.0.5",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0",
-    "redux-saga": "^0.12.0"
+    "redux-saga": "^0.12.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "autoprefixer-core": "^5.1.11",
+    "autoprefixer-core": "6.0.1",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
@@ -49,13 +56,17 @@
     "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "2.0.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint-plugin-react": "^6.4.0",
+    "express": "^4.13.4",
+    "express-graphql": "^0.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^3.1.0",
+    "pm2": "2.0.18",
     "postcss-cssnext": "^2.8.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.13.0",
     "postcss-url": "^5.1.2",
+    "precss": "^1.4.0",
     "react-addons-test-utils": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.5",
     "style-loader": "^0.13.1",
