--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,7 @@
     "transform-runtime",
     "transform-class-properties",
     "transform-function-bind",
-    "babel-plugin-transform-decorators-legacy"
+    "babel-plugin-transform-decorators-legacy",
+    "tcomb",
   ]
 }
