--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kasboek",
   "main": "index.js",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --verbose --inline --hot --history-api-fallback",
@@ -10,37 +11,47 @@
   "author": "Ferenc Radius",
   "dependencies": {
     "@risingstack/graffiti-mongoose": "^5.3.0",
-    "apollo-client": "^0.4.20",
+    "apollo-client": "^0.4.21",
     "babel-polyfill": "6.16.0",
     "babel-runtime": "6.11.6",
     "bcrypt": "^0.8.7",
-    "core-decorators": "^0.12.3",
+    "classnames": "^2.2.5",
+    "core-decorators": "^0.13.0",
     "cors": "^2.8.1",
-    "graphql": "^0.7.1",
+    "flexboxgrid": "^6.3.1",
+    "font-awesome": "^4.6.3",
+    "graphql": "^0.7.2",
     "graphql-tag": "^0.1.14",
-    "material-ui": "^0.16.0",
+    "immutability-helper": "^2.0.0",
     "moment": "^2.15.1",
     "mongoose": "^4.6.3",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
-    "react-apollo": "^0.5.8",
+    "react-apollo": "^0.5.10",
+    "react-css-themr": "^1.4.1",
     "react-dom": "^15.3.2",
+    "react-flexbox-grid": "^0.10.2",
+    "react-fontawesome": "^1.2.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
     "react-time": "^4.2.0",
+    "react-toolbox": "1.2.3",
     "redux": "^3.6.0",
     "redux-form": "^6.0.5",
     "redux-logger": "^2.6.1",
     "redux-saga": "^0.12.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "roboto-fontface": "^0.6.0"
   },
   "devDependencies": {
     "autoprefixer-core": "6.0.1",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-tcomb": "^0.3.19",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-regenerator": "^6.16.1",
@@ -53,14 +64,17 @@
     "enzyme": "^2.4.1",
     "eslint": "^3.7.0",
     "eslint-config-airbnb": "^12.0.0",
+    "eslint-config-standard-jsx": "^3.2.0",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-import": "2.0.0",
+    "eslint-plugin-import": "2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.4.0",
+    "eslint-plugin-react": "^6.4.1",
     "express": "^4.13.4",
     "express-graphql": "^0.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "mocha": "^3.1.0",
+    "file-loader": "^0.9.0",
+    "mocha": "^3.1.2",
+    "node-sass": "^3.10.1",
     "pm2": "2.0.18",
     "postcss-cssnext": "^2.8.0",
     "postcss-import": "^8.1.2",
@@ -68,9 +82,13 @@
     "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.3.2",
-    "react-hot-loader": "^3.0.0-beta.5",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "tcomb": "^3.2.15",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
+    "webpack-browser-plugin": "^1.0.12",
     "webpack-dev-server": "^1.15.1"
   }
 }
