--- a/package.json
+++ b/package.json
@@ -10,25 +10,36 @@
   },
   "author": "Ferenc Radius",
   "dependencies": {
-    "@risingstack/graffiti-mongoose": "^5.3.0",
-    "apollo-client": "^0.4.21",
+    "apollo-client": "^0.5.0-1",
+    "apollo-server": "^0.3.2",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-plugin-inline-import": "^2.0.4",
     "babel-polyfill": "6.16.0",
+    "babel-root-slash-import": "^1.1.0",
     "babel-runtime": "6.11.6",
     "bcrypt": "^0.8.7",
+    "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
     "core-decorators": "^0.13.0",
     "cors": "^2.8.1",
     "flexboxgrid": "^6.3.1",
     "font-awesome": "^4.6.3",
     "graphql": "^0.7.2",
+    "graphql-date": "^1.0.2",
     "graphql-tag": "^0.1.14",
+    "graphql-tools": "^0.7.2",
     "immutability-helper": "^2.0.0",
+    "lodash": "^4.16.4",
     "moment": "^2.15.1",
-    "mongoose": "^4.6.3",
+    "mongodb": "^2.2.10",
+    "mongorito": "^2.1.2",
+    "nodemon": "^1.11.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
-    "react-apollo": "^0.5.10",
+    "react-apollo": "^0.5.13",
     "react-css-themr": "^1.4.1",
     "react-dom": "^15.3.2",
     "react-flexbox-grid": "^0.10.2",
@@ -70,15 +81,12 @@
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.4.1",
     "express": "^4.13.4",
-    "express-graphql": "^0.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "mocha": "^3.1.2",
     "node-sass": "^3.10.1",
-    "pm2": "2.0.18",
     "postcss-cssnext": "^2.8.0",
     "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.13.0",
+    "postcss-loader": "^1.0.0",
     "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.3.2",
