--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-apollo": "^0.5.13",
     "react-css-themr": "^1.4.1",
+    "react-d3-basic": "^1.6.11",
+    "react-d3-core": "^1.3.9",
     "react-dom": "^15.3.2",
     "react-flexbox-grid": "^0.10.2",
     "react-fontawesome": "^1.2.0",
