--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "author": "Ferenc Radius",
   "dependencies": {
-    "apollo-client": "^0.5.0-1",
-    "apollo-server": "^0.3.2",
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
+    "apollo-client": "^0.5.0",
+    "apollo-server": "^0.3.3",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
     "babel-plugin-inline-import": "^2.0.4",
     "babel-polyfill": "6.16.0",
     "babel-root-slash-import": "^1.1.0",
@@ -22,24 +22,24 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
-    "core-decorators": "^0.13.0",
+    "core-decorators": "^0.14.0",
     "cors": "^2.8.1",
     "flexboxgrid": "^6.3.1",
-    "font-awesome": "^4.6.3",
+    "font-awesome": "^4.7.0",
     "graphql": "^0.7.2",
     "graphql-date": "^1.0.2",
-    "graphql-tag": "^0.1.14",
-    "graphql-tools": "^0.7.2",
+    "graphql-tag": "^0.1.15",
+    "graphql-tools": "^0.8.0",
     "immutability-helper": "^2.0.0",
-    "lodash": "^4.16.4",
-    "moment": "^2.15.1",
-    "mongodb": "^2.2.10",
+    "lodash": "^4.16.6",
+    "moment": "^2.15.2",
+    "mongodb": "^2.2.11",
     "mongorito": "^2.1.2",
     "nodemon": "^1.11.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
-    "react-apollo": "^0.5.13",
+    "react-apollo": "^0.5.16",
     "react-css-themr": "^1.4.1",
     "react-d3-basic": "^1.6.11",
     "react-d3-core": "^1.3.9",
@@ -47,48 +47,48 @@
     "react-flexbox-grid": "^0.10.2",
     "react-fontawesome": "^1.2.0",
     "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-router": "^3.0.0",
     "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
     "react-time": "^4.2.0",
-    "react-toolbox": "1.2.3",
+    "react-toolbox": "1.2.4",
     "redux": "^3.6.0",
-    "redux-form": "^6.0.5",
-    "redux-logger": "^2.6.1",
-    "redux-saga": "^0.12.0",
+    "redux-form": "^6.1.1",
+    "redux-logger": "^2.7.4",
+    "redux-saga": "^0.12.1",
     "redux-thunk": "^2.1.0",
     "roboto-fontface": "^0.6.0"
   },
   "devDependencies": {
     "autoprefixer-core": "6.0.1",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-tcomb": "^0.3.19",
-    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-tcomb": "^0.3.22",
+    "babel-plugin-transform-class-properties": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-regenerator": "^6.16.1",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.11.6",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.18.0",
     "css-loader": "^0.25.0",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.7.0",
+    "enzyme": "^2.5.1",
+    "eslint": "^3.9.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-config-standard-jsx": "^3.2.0",
-    "eslint-loader": "^1.5.0",
+    "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.4.1",
-    "express": "^4.13.4",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.5.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "node-sass": "^3.10.1",
     "postcss-cssnext": "^2.8.0",
     "postcss-import": "^8.1.2",
-    "postcss-loader": "^1.0.0",
+    "postcss-loader": "^1.1.0",
     "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.3.2",
@@ -97,8 +97,8 @@
     "style-loader": "^0.13.1",
     "tcomb": "^3.2.15",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
+    "webpack": "^1.13.3",
     "webpack-browser-plugin": "^1.0.12",
-    "webpack-dev-server": "^1.15.1"
+    "webpack-dev-server": "^1.16.2"
   }
 }
