--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graphql-tools": "^0.8.0",
     "immutability-helper": "^2.0.0",
     "lodash": "^4.16.6",
+    "modernizr": "^3.3.1",
     "moment": "^2.15.2",
     "mongodb": "^2.2.11",
     "mongorito": "^2.1.2",
@@ -40,7 +41,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-apollo": "^0.5.16",
-    "react-css-themr": "^1.4.1",
+    "react-css-themr": "^1.6.0",
     "react-d3-basic": "^1.6.11",
     "react-d3-core": "^1.3.9",
     "react-dom": "^15.3.2",
